<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_page_colour"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".tutorial_page">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-70dp"
        android:layout_marginEnd="-70dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/background_tutorial"
        android:elevation="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:text="Tutorial"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="-15dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/tutorial_anim" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="80dp"
                app:cardBackgroundColor="#545C7D"
                app:cardCornerRadius="12dp"
                app:cardElevation="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/tut1"
                            android:textAlignment="center"
                            android:textColor="#D3DBFA"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/custom_card_background"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="sans-serif"
                                android:text="@string/tut2"
                                android:textAlignment="viewStart"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/custom_card_background"
                            android:padding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:layout_marginBottom="3dp"
                                android:text="@string/tut3"
                                android:textAlignment="viewStart"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="230dp"
                            android:layout_marginBottom="10dp"
                            app:cardBackgroundColor="#D3DBFA"
                            app:cardCornerRadius="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10sp"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginTop="15dp"
                                    android:layout_marginEnd="5dp"
                                    android:fontFamily="sans-serif"
                                    android:text="@string/tut4"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/imageView4"
                                    android:layout_width="150dp"
                                    android:layout_height="50dp"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/tutorial_case1"
                                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                                    app:layout_constraintStart_toStartOf="@+id/textView4"
                                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                                <com.airbnb.lottie.LottieAnimationView
                                    android:id="@+id/lottieAnimationView"
                                    android:layout_width="150dp"
                                    android:layout_height="150dp"
                                    android:layout_marginTop="-10dp"
                                    android:layout_marginEnd="-50dp"
                                    android:layout_marginBottom="-20dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                                    app:layout_constraintEnd_toEndOf="@+id/imageView4"
                                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                                    app:lottie_autoPlay="true"
                                    app:lottie_loop="true"
                                    app:lottie_rawRes="@raw/click_anim2" />

                                <com.airbnb.lottie.LottieAnimationView
                                    android:id="@+id/lottieAnimationView2"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                                    app:lottie_autoPlay="true"
                                    app:lottie_loop="true"
                                    app:lottie_rawRes="@raw/correct_anim" />

                                <TextView
                                    android:id="@+id/textView5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10sp"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:fontFamily="sans-serif"
                                    android:paddingTop="20dp"
                                    android:text="@string/tut5"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                                <ImageView
                                    android:id="@+id/imageView5"
                                    android:layout_width="150dp"
                                    android:layout_height="50dp"
                                    android:layout_marginTop="15dp"
                                    android:layout_marginBottom="20dp"
                                    android:src="@drawable/tutorial_case2"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                                    app:layout_constraintStart_toStartOf="@+id/textView5"
                                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                                <com.airbnb.lottie.LottieAnimationView
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                                    app:layout_constraintTop_toTopOf="@+id/imageView5"
                                    app:lottie_autoPlay="true"
                                    app:lottie_loop="true"
                                    app:lottie_rawRes="@raw/wrong_anim" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </ScrollView>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>